Add patron_id to GET /card response
